fixing overflow-x

--- a/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/static_source/css/base/base.scss
+++ b/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/static_source/css/base/base.scss
@@ -9,6 +9,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  overflow-x: hidden;
 
   // Example font-family inclusion
   // font-family: "GT Walsheim Pro", sans-serif;
